syntax = "proto3";

option go_package = "./proto";

// The currency service definition.
service Currency {
  // Sends a request to get the exchange rate between two currencies
  rpc GetExchangeRate(GetExchangeRateRequest) returns (GetExchangeRateResponse){
  }

  // Sends a request to get historical exchange rates between two currencies
  rpc GetHistoricalExchangeRates(GetHistoricalExchangeRatesRequest) returns (GetHistoricalExchangeRatesResponse){
  }
}

// The request message to get the exchange rate between two currencies
message GetExchangeRateRequest {
  string from_currency = 1; // Origin currency code
  string to_currency = 2; // Target currency code
  string trade_date = 3; // The date for which exchange rate is requested in the format 'yyyy-mm-dd'
}

// The response message containing the exchange rate
message GetExchangeRateResponse {
  double exchange_rate = 1; // Exchange rate from origin to target currency
}

// The request message to get historical exchange rates between two currencies
message GetHistoricalExchangeRatesRequest {
  string from_currency = 1; // Origin currency code
  string to_currency = 2; // Target currency code
  string start_date = 3; // The start date of the range for which historical exchange rates are requested in the format 'yyyy-mm-dd'
  string end_date = 4; // The end date of the range for which historical exchange rates are requested in the format 'yyyy-mm-dd'
}

// Object to hold a date and the exchange rate for that date
message HistoricalRate {
  string from_currency = 1; // Origin currency code
  string to_currency = 2; // Target currency code
  string trade_date = 3; // Date in 'yyyy-mm-dd' format
  double exchange_rate = 4; // Exchange rate for the given date
}

// The response message containing a list of historical exchange rates
message GetHistoricalExchangeRatesResponse {
  repeated HistoricalRate historical_rates = 1; // List of historical exchange rates for the requested date range
}